# langchain-rust

./: .pre-commit.yml  CODE_OF_CONDUCT.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Cargo.toml  LICENSE  README.md  crates-io.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
examples/: Cargo.toml
langchain_rs/: Cargo.toml
langchain_rs/src/: lib.rs
langchain_rs/src/llms/: openai.rs
langchain_rs/src/memory/: mod.rs
langchain_rs/src/memory/message_histories/: mod.rs  mongodb.rs
langchain_rs/src/prompts/: prompt.rs
langchain_rs/src/schema/: embedding.rs  llm.rs  message_history.rs  messages.rs  mod.rs  vector_store.rs
langchain_rs/src/schema/document/: document.rs  document_loader.rs  document_path.rs  document_splitter.rs  documents.rs  mod.rs
langchain_rs/src/utils/: tokenizer.rs
langchain_rs/src/vector_stores/: mod.rs  qdrant.rs
langchain_rs/tests/: lib.rs
