[package]
name = "langchain_rs"
version = "0.0.1"                                       # remember to update html_root_url
authors = ["Ryo Kanazawa <ryo.kanazawa34@gmail.com>"]
categories = ["llm", "gen-ai"]
description = "Rust version of Langchain"
documentation = "https://docs.rs/langchain_rs"
edition = "2021"
homepage = "https://github.com/gyroflaw/langchain_rs"
keywords = ["langchain", "llm"]
license = "MIT"
readme = "crates-io.md"
repository = "https://github.com/gyroflaw/langchain_rs"

[dependencies]
anyhow = "1.0.*"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"

### FEATURES #################################################################
