[package]
name = "langchain_rs"
version = "0.0.2"                                       # remember to update html_root_url
authors = ["Ryo Kanazawa <ryo.kanazawa34@gmail.com>"]
categories = ["llm", "gen-ai"]
description = "Rust version of Langchain"
documentation = "https://docs.rs/langchain_rs"
edition = "2021"
homepage = "https://github.com/gyroflaw/langchain_rs"
keywords = ["langchain", "llm"]
license = "MIT"
readme = "crates-io.md"
repository = "https://github.com/gyroflaw/langchain_rs"

[dependencies]
anyhow = "1.0.*"
async-openai = { version = "0.14.0", optional = true }
async-trait = "0.1.68"
env_logger = "0.11.0"
futures = "0.3"
mongodb = { version = "2.6.1", optional = true }
md5 = "0.7.0"
parking_lot = "0.12.1"
qdrant-client = { version = "1.4.0", optional = true }
redis = { version = "0.23.3", features = [
  "tokio-comp",
  "json",
], optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
tiktoken-rs = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
uuid = "1.3.3"

[dev-dependencies]
dotenvy = "0.15.7"

### FEATURES #################################################################
[features]
default = ["openai", "mongodb", "qdrant"]

# LLMS
openai = ["dep:async-openai"]

# Message store
redis = ["dep:redis"]
mongodb = ["dep:mongodb"]

# Vector store
qdrant = ["dep:qdrant-client"]

# Tools
